[MOB-896] Implemented start fragment for result

--- a/app/src/main/res/layout-land/fragment_billing_address.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address.xml
@@ -125,7 +125,7 @@
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/big_margin"
           android:layout_marginTop="16dp"
-          android:text="Billing Address"
+          android:text="@string/purchase_address_title"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0"
           app:layout_constraintStart_toEndOf="@id/mid_guideline"
@@ -136,9 +136,8 @@
           android:id="@+id/cc_info_view"
           android:layout_width="0dp"
           android:layout_height="0dp"
+          android:layout_marginTop="@dimen/normal_margin"
           android:overScrollMode="never"
-          android:paddingStart="@dimen/big_margin"
-          android:paddingEnd="@dimen/big_margin"
           android:scrollbars="none"
           app:layout_constraintBottom_toTopOf="@id/bottom_separator"
           app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +154,7 @@
           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/content_main"
               android:layout_width="match_parent"
-              android:layout_height="216dp"
+              android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/big_margin"
               android:layout_marginEnd="@dimen/big_margin"
               >
@@ -166,7 +165,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/normal_margin"
-                android:hint="Address"
+                android:hint="@string/purchase_address_address_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -187,8 +186,8 @@
                 style="@style/BillingTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
-                android:hint="City"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:hint="@string/purchase_address_apartment_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/address_layout"
@@ -210,8 +209,8 @@
                 style="@style/BillingTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
-                android:hint="City"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:hint="@string/purchase_address_city_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/number_layout"
@@ -232,9 +231,9 @@
                 style="@style/BillingTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginTop="@dimen/normal_margin"
                 android:layout_marginEnd="@dimen/small_margin"
-                android:hint="Zip/Postal Code"
+                android:hint="@string/purchase_address_post_code_field"
                 app:layout_constraintEnd_toStartOf="@id/state_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/city_layout"
@@ -255,10 +254,9 @@
                 android:id="@+id/state_layout"
                 style="@style/BillingDropDown"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
-                android:hint="State"
-                app:layout_constraintBottom_toBottomOf="@id/zipcode_layout"
+                android:hint="@string/purchase_address_state_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/zipcode_layout"
                 app:layout_constraintTop_toTopOf="@id/zipcode_layout"
@@ -278,7 +276,8 @@
                 style="@style/BillingDropDown"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:focusable="false"
                 android:hint="@string/verification_insert_phone_field_country"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -290,7 +289,7 @@
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:editable="false"
-                  android:text="United States"
+                  android:text="US"
                   android:textSize="14sp"
                   />
 
