--- a/app/src/main/res/layout/fragment_billing_address_top_up.xml
+++ b/app/src/main/res/layout/fragment_billing_address_top_up.xml
@@ -145,7 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/half_large_margin"
             android:layout_marginEnd="@dimen/half_large_margin"
-            android:text="Billing Address"
+            android:text="@string/purchase_address_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
               style="@style/BillingTextInputLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:hint="Address"
+              android:hint="@string/purchase_address_address_field"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
@@ -191,7 +191,7 @@
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/normal_margin"
-              android:hint="Number"
+              android:hint="@string/purchase_address_apartment_field"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/address_layout"
@@ -214,7 +214,7 @@
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
-              android:hint="City"
+              android:hint="@string/purchase_address_city_field"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/number_layout"
@@ -237,7 +237,7 @@
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
               android:layout_marginEnd="@dimen/small_margin"
-              android:hint="Zip/Postal Code"
+              android:hint="@string/purchase_address_post_code_field"
               app:layout_constraintEnd_toStartOf="@id/state_layout"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/city_layout"
@@ -261,7 +261,7 @@
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/small_margin"
               android:layout_marginTop="@dimen/small_margin"
-              android:hint="State"
+              android:hint="@string/purchase_address_state_field"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toEndOf="@id/zipcode_layout"
               app:layout_constraintTop_toBottomOf="@id/city_layout"
@@ -282,7 +282,6 @@
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/small_margin"
-              android:enabled="false"
               android:focusable="false"
               android:hint="@string/verification_insert_phone_field_country"
               app:layout_constraintEnd_toEndOf="parent"
@@ -295,7 +294,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:editable="false"
-                android:text="United States"
+                android:text="US"
                 android:textSize="14sp"
                 />
 
