--- a/app/src/main/res/layout/fragment_billing_address.xml
+++ b/app/src/main/res/layout/fragment_billing_address.xml
@@ -50,7 +50,7 @@
           android:layout_height="wrap_content"
           android:layout_below="@id/line_separator"
           android:layout_marginStart="@dimen/big_margin"
-          android:text="Billing Address"
+          android:text="@string/purchase_address_title"
           />
 
       <ScrollView
@@ -84,7 +84,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/normal_margin"
-                android:hint="Address"
+                android:hint="@string/purchase_address_address_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -106,7 +106,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/normal_margin"
-                android:hint="Number"
+                android:hint="@string/purchase_address_apartment_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/address_layout"
@@ -128,8 +128,8 @@
                 style="@style/BillingTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
-                android:hint="City"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:hint="@string/purchase_address_city_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/number_layout"
@@ -150,9 +150,9 @@
                 style="@style/BillingTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginTop="@dimen/normal_margin"
                 android:layout_marginEnd="@dimen/small_margin"
-                android:hint="Zip/Postal Code"
+                android:hint="@string/purchase_address_post_code_field"
                 app:layout_constraintEnd_toStartOf="@id/state_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/city_layout"
@@ -173,14 +173,12 @@
                 android:id="@+id/state_layout"
                 style="@style/BillingDropDown"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
-                android:layout_marginTop="@dimen/small_margin"
-                android:hint="State"
-                app:layout_constraintBottom_toBottomOf="@id/zipcode_layout"
+                android:hint="@string/purchase_address_state_field"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/zipcode_layout"
-                app:layout_constraintTop_toBottomOf="@id/city_layout"
+                app:layout_constraintTop_toTopOf="@id/zipcode_layout"
                 >
               <com.google.android.material.textfield.MaterialAutoCompleteTextView
                   android:id="@+id/state"
@@ -197,7 +195,7 @@
                 style="@style/BillingDropDown"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
+                android:layout_marginTop="@dimen/normal_margin"
                 android:focusable="false"
                 android:hint="@string/verification_insert_phone_field_country"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +208,7 @@
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:editable="false"
-                  android:text="United States"
+                  android:text="US"
                   android:textSize="14sp"
                   />
 
