--- a/app/src/main/res/layout/item_promotions_progress.xml
+++ b/app/src/main/res/layout/item_promotions_progress.xml
@@ -13,6 +13,7 @@
     >
 
   <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/progress_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingBottom="@dimen/normal_margin"
