--- a/app/src/main/res/drawable/promotions_future_background.xml
+++ b/app/src/main/res/drawable/promotions_future_background.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-  <stroke
-      android:width="2dp"
-      android:color="#d9d9d9"
-      android:dashWidth="10dp"
-      android:dashGap="6dp" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+  <item android:drawable="?android:attr/selectableItemBackground" />
+  <item>
+    <shape>
+      <stroke
+          android:width="2dp"
+          android:color="#d9d9d9"
+          android:dashWidth="10dp"
+          android:dashGap="6dp" />
 
-  <padding
-      android:bottom="7dp"
-      android:left="7dp"
-      android:right="7dp"
-      android:top="7dp" />
-  <corners android:radius="12dp" />
-</shape>
+      <padding
+          android:bottom="7dp"
+          android:left="7dp"
+          android:right="7dp"
+          android:top="7dp" />
+      <corners android:radius="12dp" />
+    </shape>
+  </item>
+</layer-list>
