--- a/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
@@ -144,177 +144,26 @@
           app:layout_constraintTop_toBottomOf="@id/top_separator_topup"
           >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/title"
+            style="@style/BillingAddress.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/big_margin"
+            android:text="@string/purchase_address_title"
+            />
+
+        <include
             android:id="@+id/billing_info_container"
+            layout="@layout/layout_billing_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/title"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/big_margin"
+            android:layout_marginTop="@dimen/normal_margin"
             android:layout_marginEnd="@dimen/big_margin"
-            >
-
-          <TextView
-              android:id="@+id/title"
-              style="@style/BillingAddress.Title"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="@string/purchase_address_title"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintHorizontal_bias="0"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              />
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/address_layout"
-              style="@style/BillingTextInputLayout"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:layout_weight="3.5"
-              android:hint="@string/purchase_address_address_field"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/title"
-              >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/address"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-                android:maxLines="1"
-                android:textSize="14sp"
-                tools:text="1600 Amphitheatre Parkway"
-                />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/number_layout"
-              style="@style/BillingTextInputLayout"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:hint="@string/purchase_address_apartment_field"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/address_layout"
-              >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/number"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-                android:inputType="number"
-                android:maxLines="1"
-                android:textColor="#000000"
-                tools:text="36"
-                />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/city_layout"
-              style="@style/BillingTextInputLayout"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:hint="@string/purchase_address_city_field"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/number_layout"
-              >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/city"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-                android:maxLines="1"
-                android:textSize="14sp"
-                tools:text="Mountain View"
-                />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/zipcode_layout"
-              style="@style/BillingTextInputLayout"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:layout_marginEnd="@dimen/small_margin"
-              android:hint="@string/purchase_address_post_code_field"
-              app:layout_constraintEnd_toStartOf="@id/state_layout"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/city_layout"
-              >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/zipcode"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-                android:inputType="number"
-                android:maxLines="1"
-                android:textSize="14sp"
-                tools:text="94043"
-                />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/state_layout"
-              style="@style/BillingDropDown"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginStart="@dimen/small_margin"
-              android:hint="@string/purchase_address_state_field"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toEndOf="@id/zipcode_layout"
-              app:layout_constraintTop_toTopOf="@id/zipcode_layout"
-              >
-            <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                android:id="@+id/state"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:editable="false"
-                android:textSize="14sp"
-                tools:text="CA"
-                />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/country_layout"
-              style="@style/BillingDropDown"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/normal_margin"
-              android:focusable="false"
-              android:hint="@string/verification_insert_phone_field_country"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/state_layout"
-              >
-
-            <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                android:id="@+id/country"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:editable="false"
-                android:text="US"
-                android:textSize="14sp"
-                />
-
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <com.google.android.material.switchmaterial.SwitchMaterial
-              android:id="@+id/remember"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"
-              android:button="@color/billing_switch_color"
-              android:text="@string/dialog_credit_card_remember"
-              android:textSize="14sp"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/country_layout"
-              />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            />
 
       </RelativeLayout>
 
