--- a/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
@@ -159,10 +159,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/big_margin"
             android:layout_marginTop="@dimen/normal_margin"
-            android:layout_marginEnd="@dimen/big_margin"
+            android:layout_marginEnd="24dp"
             />
 
       </RelativeLayout>
